GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/Package_Sales_History__c.object-meta.xml
<CustomObject>
    <label>Package Sales History</label>
    <nameField>
        <displayFormat>PSH-{0000000000}</displayFormat>
        <label>Package Sales History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Sales History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>