GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/Cin__c.field-meta.xml
<CustomField>
    <fullName>Cin__c</fullName>
    <label>Cin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>