GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/conversionRate__c.field-meta.xml
<CustomField>
    <fullName>conversionRate__c</fullName>
    <label>conversionRate</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>