GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/destinationUic__c.field-meta.xml
<CustomField>
    <fullName>destinationUic__c</fullName>
    <label>destinationUic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>