GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/OassisAuditRef__c.field-meta.xml
<CustomField>
    <fullName>OassisAuditRef__c</fullName>
    <label>OassisAuditRef</label>
    <length>100</length>
    <type>Text</type>
</CustomField>