GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/originUic__c.field-meta.xml
<CustomField>
    <fullName>originUic__c</fullName>
    <label>originUic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>