GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/passengerFirstName__c.field-meta.xml
<CustomField>
    <fullName>passengerFirstName__c</fullName>
    <label>passengerFirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>