GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/passengerLastName__c.field-meta.xml
<CustomField>
    <fullName>passengerLastName__c</fullName>
    <label>passengerLastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>