GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/paymentCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>paymentCurrencyAmount__c</fullName>
    <label>paymentCurrencyAmount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>