GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/paymentCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>paymentCurrencyCode__c</fullName>
    <label>paymentCurrencyCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>