GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/fields/pnr__c.field-meta.xml
<CustomField>
    <fullName>pnr__c</fullName>
    <label>pnr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>