GearsetPOC/force-app/main/default/objects/Package_Sales_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pnr__c</field>
        <operation>equals</operation>
        <value>FDCPHX</value>
    </filters>
    <label>All</label>
</ListView>